# DaemonSaigoNativeClientToolkit

./: CMakeLists.txt  README.md
cmake/: cross-toolchain-mingw32.cmake  cross-toolchain-mingw64.cmake
patches/binutils/: 0001-gprof-makefile-fix-building-m-files.patch
tools/release/: build  nproc
tools/release/conf/: freebsd-amd64.conf  linux-amd64.conf  linux-arm64.conf  linux-armhf.conf  linux-i686.conf  macos-amd64.conf  macos-arm64.conf  windows-amd64.conf  windows-i686.conf
